# ZetriScript

./: CMakeLists.txt  README.md  grammar.md
examples/: example.zetri  example.zs  math_example.ps  math_example.zs
src/: error.cpp  interpreter.cpp  lexer.cpp  main.cpp  parser.cpp  parser_.cpp  position.cpp  string_with_arrows.cpp  token.cpp
src/zetriscript/: package.json  vsc-extension-quickstart.md
zetriscript/: CHANGELOG.md  README.md  package.json
zetriscript/syntaxes/: zetriscript.tmLanguage.json
zetriscript/themes/: zetriscript-color-theme.json
